--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h1 style="background-color:Tomato;">Hello From Walmart - SAMS IDC session on Azure Fundamentals - Azure App Service</h1>
+<h1 style="background-color:Tomato;">Hello From Walmart - SAMS IDC session - Azure App Service</h1>
 <p>This is a <b>Demo</b> App.</p>
   <p>Fun Learning Azure</p>
 
